# sample-package

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.sh
src/sample_package/: foo.py
tests/: test_sample_package.py
{{cookiecutter.package_name}}/: .flake8  .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.package_name}}/tests/: test_sample_package.py  test_{{cookiecutter.package_name|replace("-","_")}}.py
{{cookiecutter.packagename}}/: .pre-commit-config.yaml  pyproject.toml
