[tool.poetry]
name = "sample-package"
version = "0.1.0"
description = "a sample package"
authors = ["Kevin Nowland <kevin.nowland@gmail.com>"]
license = "MIT"
repository = "https://github.com/kevinnowland/sample-package"


[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^6.2.5"
pre-commit = "^2.16.0"


[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
    \(
         \.git
       | \.pytest_cache
       | build
       | dist
    \)
)
'''


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
