[tool.poetry]
name = "sample-package"
version = "0.1.0"
description = "a sample package"
authors = ["Kevin Nowland <kevin.nowland@gmail.com>"]
license = "MIT"
repository = "https://github.com/kevinnowland/sample-package"


[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^6.2.5"
pre-commit = "^2.16.0"
tox = "^3.24.5"


[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
    \(
         \.git
       | \.pytest_cache
       | \.tox
       | \.mypy_cache
       | build
       | dist
    \)
)
'''


[tool.isort]
profile = "black"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39
skipsdist = true
skip_missing_interprters = true

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest -v
"""


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
